Fri Feb 13 01:12:19 1998  Harri Porten  <porten@tu-harburg.de>

	* loginterm.cpp: implemented the possibility to log in via
	a simple terminal window. Should have developed a generic widget
	that could have been shared by Miniterm, the debug window and
	loginterm, but I didn't want to touch the rest of the stuff yet.
	* kpppconfig.h: increased max. script size to 20

Thu Feb  5 22:00:55 1998  Harri Porten  <porten@tu-harburg.de>

	* pppdata.cpp: added pppdError() and setpppdError()
	* main.cpp: added new error message for timeout
	* removed last remaining command_on_disconnect bug (see Jan 24)

Sat Jan 31 19:56:03 1998  Harri Porten  <porten@tu-harburg.de>

	* main.cpp: in some cases kppp connected to an account 
	different from the one selected in the combo box. Added
	setAccount() in connectbutton() to fix that, hopefully.

Sun Jan 25 00:45:45 1998  Harri Porten  <porten@tu-harburg.de>

	* docking.cpp: included a hide() statement to cleanly undock
	the widget from the panel. Otherwise the window stayed invisible
	after one dock/undock-cycle.

Sat Jan 24 03:40:44 1998  Harri Porten  <porten@tu-harburg.de>

	* fixed a bug (occuring twice) that caused the if-statement for
	command_on_connect and command_on_disconnect to be always true.

Fri Jan 23 01:32:57 1998  Harri Porten  <porten@tu-harburg.de>

	* fixed alignment in conwindow.cpp's layout.

Wed Jan 21 03:22:43 1998  Harri Porten  <porten@tu-harburg.de>

	* prevented the password from being left in kppprc after the
 	option 'Store password' has just been turned off
	
	* the ID & password field will be disabled if no account has
	been created yet

	* pppdata.cpp: removed absolute path for default log viewer
	to prevent warning messages upon first startup if KDE's location
 	differs from /usr/local/kde

	* removed gpppdata.Id() and gpppdata.setId() since they have been
	replaced by storedUsername() and setStoredUsername()

Tue Jan 20 15:30:08 1998  Mario Weilguni  <mweilguni@sime.com>
